--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <div class="bottom-text">
       Don't have account? <a href="#">Sign up</a>
     </div>
+    <div>
+      <a href="https://enhancv.com/terms/">Visit Me</a>
+    </div  
   </form>
 
    <script type="text/javascript">
